--- a/app/assets/stylesheets/votes.css.scss
+++ b/app/assets/stylesheets/votes.css.scss
@@ -76,8 +76,8 @@ section.stat {
 	#chicken:hover { background-position: 0 801px; }
 	#chicken.active { background-position: 0 401px; }
 	#cobra { background-position: 300px 0; }
-	#cobra:hover { background-position: 300px 801px; }
-	#cobra.active { background-position: 300px 401px; }
+	#cobra:hover { background-position: 300px 800px; }
+	#cobra.active { background-position: 300px 400px; }
 	.score {
 		width: 360px; 
 		height: 400px;
